# lakehouse

./: .env  docker-compose.yml  main.py  pyproject.toml
sample_data/: customers.parquet  manifest.json
scripts/: ingest_customers.py  runner.py
src/lakehouse/bronze/: .service.py.swp  service.py
src/lakehouse/ingestion/: .ingest_customers.py.swp  csv_to_parquet.py  ingest_customers.py
src/lakehouse/ingestion/sample_data/: customers.csv
src/lakehouse/metadata/: manifest.py
src/lakehouse/query/: duckdb_client.py  duckdb_playground.py
src/lakehouse/storage/: .minio_client.py.swp  minio_client.py  object_paths.py
